Pakeista vardų erdvė

--- a/datasets/gov/vmi/gyventoju_islaidos/vmi.ipynb
+++ b/datasets/gov/vmi/gyventoju_islaidos/vmi.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "islaidos=pd.read_csv(\"data/datasets/gov/vmi/gyventojų_patirtos_išlaidos/GyventojuIslaidos.csv\")"
+    "islaidos=pd.read_csv(\"data/datasets/gov/vmi/gyventoju_islaidos/GyventojuIslaidos.csv\")"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rc = pd.read_csv(\"data/datasets/gov/rc/gyventojų_registro_duomenys/01_gr_open_amzius_lytis_pilietybes_sav_r1.csv\")"
+    "rc = pd.read_csv(\"data/datasets/gov/rc/gr/01_gr_open_amzius_lytis_pilietybes_sav_r1.csv\")"
    ]
   },
   {
